fixing spacing

--- a/assets/css/theme-main.css
+++ b/assets/css/theme-main.css
@@ -197,10 +197,10 @@ html, body {
 :root { --bg-ratio: 0.788}
 /* Scroll-through background */
 body {
- background-image: url('/static/img/sam_grass.png');
+   background-image: url('/static/img/sam_grass.png');
   background-size: 100% auto;       /* Show the whole image */
  background-position: top center;/* Start at the top edge */
  background-repeat: no-repeat;
   background-attachment: scroll;  /* Moves as you scroll */
- min-height: calc(100vw / var(--bg-ratio));*/
+ min-height: calc(100vw / var(--bg-ratio));
 }
